tests/baselines/reference/genericCallWithObjectTypeArgs.errors.txt
tests/cases/conformance/types/typeRelationships/typeInference/genericCallWithObjectTypeArgs.ts(20,9): error TS2448: The type arguments cannot be inferred from the usage. Try specifying the type arguments explicitly.


==== tests/cases/conformance/types/typeRelationships/typeInference/genericCallWithObjectTypeArgs.ts (1 errors) ====
    class C {
        private x: string;
    }
    
    class D {
        private x: string;
    }
    
    class X<T> {
        x: T;
    }
    
    function foo<T>(t: X<T>, t2: X<T>) {
        var x: T;
        return x;
    }
    
    var c1 = new X<C>();
    var d1 = new X<D>();
    var r = foo(c1, d1); // error
            ~~~
!!! error TS2448: The type arguments cannot be inferred from the usage. Try specifying the type arguments explicitly.
    var r2 = foo(c1, c1); // ok